CMAKE_MINIMUM_REQUIRED(VERSION 3.1)
PROJECT(COLMAP)
SET(CMAKE_CXX_STANDARD 17)
SET(CMAKE_EXPORT_COMPILE_COMMANDS ON)
SET(CMAKE_CXX_FLAGS "-Wall -Wextra")

FIND_PACKAGE(OpenCV REQUIRED)
FIND_PACKAGE(SQLite3 REQUIRED)
FIND_PACKAGE(Ceres REQUIRED)
FIND_PACKAGE(glog REQUIRED)
FIND_PACKAGE(Eigen3 REQUIRED NO_MODULE)
INCLUDE_DIRECTORIES(${OpenCV_INCLUDE_DIRS})

ADD_SUBDIRECTORY(my_sfm)
